<resources>
    <string name="app_name">Covid-19 Treatment</string>
    <string name="not_user_register_not">Not User? <u>Register Now!</u></string>
    <string name="already_have_account_login">Already have Account?<u>Login!</u> </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Symptoms</string>
    <string name="nav_notification">Prevention</string>
    <string name="nav_account">Treatment</string>
    <string name="protect_yourself_and_others_around_you_by_knowing_the_facts_and_taking_appropriate_precautions_follow_advice_provided_by_your_local_health_authority">Protect yourself and others around you by knowing the facts and taking appropriate precautions. Follow advice provided by your local health authority.</string>
    <string-array name="Gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="country_prompt">Choose a Location</string>
    <string-array name="Region_arrays">
        <item>Please Select Region</item>
        <item>Addis Ababa</item>
        <item>Afar</item>
        <item>Amhara</item>
        <item>Benishangul-Gumuz</item>
        <item>Dire Dawa</item>
        <item>Gembela</item>
        <item>Harari</item>
        <item>Oromia</item>
        <item>Somalia</item>
        <item>Sidama</item>
        <item>SNNPR</item>
        <item>Tigray</item>
    </string-array>
    <string-array name="agegroup_arrays">
        <item>Please select an age</item>
        <item>younger than 2 years old</item>
        <item>2 - 4</item>
        <item>5 - 9</item>
        <item>10 - 12</item>
        <item>13 - 17</item>
        <item>19 - 29</item>
        <item>30 - 39</item>
        <item>40 - 49</item>
        <item>50 - 59</item>
        <item>60 - 69</item>
        <item>70 - 79</item>
        <item>80 +</item>
    </string-array>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="your_weight_in_kg">Your Weight in Kg</string>
    <string name="your_height_in_meter">Your Height in Meter</string>
    <string name="calculate">Calculate</string>
    <string name="your_result">Your Result</string>
    <string name="bmi_categories">BMI Categories:</string>
    <string name="underweight_less_than_18_5">Underweight = less than 18.5</string>
    <string name="normal_weight_18_5_24_9">Normal weight = 18.5-24.9</string>
    <string name="overweight_25_29_9">Overweight = 25-29.9</string>
    <string name="obesity_bmi_of_30_or_greater">Obesity = BMI of 30 or greater</string>
    <string name="languate_already_selected">Language already selected!</string>
    <string name="symptoms">Symptoms</string>
    <string name="common_syptom_of_covid_19">Common symptom of Covid-19</string>
    <string name="prevention">Prevention</string>
    <string name="recommendations_to_prevent_covid_19">Recommendations to prevent covid-19</string>
    <string name="treatment">Treatment</string>
    <string name="treatment_tip_of_covid_19">Treatment tip of Covid-19</string>
    <string name="covid_19_cases">Covid-19 Cases</string>
    <string name="total_confirmed_recovered_and_deaths">Total confirmed, recovered and deaths</string>
    <string name="risk_assesment">Risk assessment</string>
    <string name="checkup_results_based_on_who_and_cdc_guideline">Checkup results based on WHO and CDC guideline</string>
    <string name="self_checker">Self Checker</string>
    <string name="self_checker_is_an_interactive_clinical_assessment_tool_that_will_assist_individuals">Self-Checker is an interactive clinical assessment tool that will assist individuals</string>
    <string name="survival_rate">Survival Rate</string>
    <string name="survival_rate_calculator_based_on_world_data">Survival Rate Calculator based on World data</string>
    <string name="fascts_on_covid">Facts on Covid</string>
    <string name="facts_common_rummor_about_covid">Facts, common rummor about covid</string>
    <string name="covid_case_et">Covid Case ET</string>
    <string name="covid_regional">Covid Regional</string>
    <string name="covid_case_world">Covid Case world</string>
    <string name="facts_about_covid_19">Facts About COVID-19</string>
    <string name="these_facts_come_from_the_world_health_organization_they_correct_common_untrue_rumors_about_coronavirus_covid_19">These facts come from the World Health Organization. They correct common, untrue rumors about coronavirus (COVID-19).</string>
    <string name="when_properly_worn_medical_masks">When properly worn, medical masks won\'t make you breathe in too little oxygen or too much carbon dioxide.</string>
    <string name="medical_masks_also_known_as_surgical_masks_are_flat_or_pleated_masks_that_attach_to_the_head_with_straps_or_loops_medical_masks_may_feel_uncomfortable">Medical masks, also known as surgical masks, are flat or pleated masks that attach to the head with straps or loops. Medical masks may feel uncomfortable if worn for a long time, but they won\'t make you breathe in too little oxygen or too much carbon dioxide.</string>
    <string name="source_world_health_organization">Source: World Health Organization</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="covid_19_risk_assessment">Covid-19 Risk Assessment</string>
    <string name="coronavirus_self_checker">Coronavirus Self-Checker</string>
    <string name="the_purpose_of_self_checker">The purpose of the Coronavirus Self-Checker is to help you make decisions about seeking appropriate medical care. This system is not intended for the diagnosis or treatment of disease or other conditions, including COVID-19.</string>
    <string name="the_purpose_of_self_chacker_2">This self-checker is not a substitute for professional medical advice, diagnosis, or treatment. Always consult a medical professional for serious symptoms or emergencies.</string>
    <string name="i_agree">I Agree</string>
    <string name="i_don_t_agree">I Don\'t Agree</string>
    <string name="first_if_you_are_experiencing_a_life_threatening_emergency_please_call_8335_952_immediately_n_nif_you_are_not_experiencing_a_life_threatening_emergency_let_s_get_started">First, if you are experiencing a life-threatening emergency, please call 8335/952 immediately.\n\nIf you are not experiencing a life-threatening emergency, let’s get started.</string>
    <string name="are_you_ethiopian_or_select_region_your_location_right_now">Are you from Ethiopia or Select Region (your Location) right now?</string>
    <string name="are_you_answering_for_yourself_or_someone_else">Are you answering for yourself or someone else?</string>
    <string name="my_self">My Self</string>
    <string name="some_one_else">Some one else</string>
    <string name="what_is_your_age">What is your age ?</string>
    <string name="please_ask_your_parent_or_guardian_to_help_you_complete_these_questions">Please ask your parent or guardian to help you complete these questions.</string>
    <string name="what_is_your_gender">What is your gender ?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="do_you_have_any_of_these_life_threatening_symptoms">Do you have any of these life-threatening symptoms?</string>
    <string name="bluish_lips_or_face">Bluish lips or face</string>
    <string name="severe_and_constant_pain_or_pressure_in_the_chese">Severe and constant pain or pressure in the chest</string>
    <string name="extreme_difficulty_breathing_such_as_gasping_for_air_being_unable_to_talk_without_catching_your_breath_severe_wheezing_nostrils_flaring_e">Extreme difficulty breathing (such as gasping for air, being unable to talk without catching your breath, severe wheezing, nostrils flaring)e</string>
    <string name="new_disorientation_acting_confused">New disorientation (acting confused)</string>
    <string name="unconscious_or_very_difficult_to_wake_up">Unconscious or very difficult to wake up</string>
    <string name="slurred_speech_or_difficulty_speaking_new_or_worsening">Slurred speech or difficulty speaking (new or worsening)</string>
    <string name="new_or_worsening_seizures">New or worsening seizures</string>
    <string name="signs_of_low_blood_pressure_too_weak_to_stand_dizziness_lightheaded_feeling_cold_pale_clammy_skin">Signs of low blood pressure (too weak to stand, dizziness, lightheaded, feeling cold, pale, clammy skin)</string>
    <string name="dehydration_dry_lips_and_mouth_not_urinating_much_sunken_eyes">Dehydration (dry lips and mouth, not urinating much, sunken eyes)</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="urgent_medical_attention_may_be_needed_please_call_8335">Urgent medical attention may be needed. Please call 8335/952 or go to the Emergency Department.</string>
    <string name="based_on_your_their_symptoms_you_may_need_urgent_medical_care_please">Based on your (their) symptoms, you may need urgent medical care. Please call 8335/952 or go to the nearest emergency department.</string>
    <string name="tell_the_8335_952_operator_or_emergency_staff_if_you_have_had_contact_with_someone_with_covid_19">Tell the 8335/952 operator or emergency staff if you have had contact with someone with COVID-19.</string>
    <string name="are_you_feeling_sick">Are you feeling sick?</string>
    <string name="in_the_two_weeks_before_you_felt_sick">In the two weeks before you felt sick, did you care for or have close contact (within 6 feet of an infected person for at least 15 minutes) with someone with symptoms of COVID-19, tested for COVID-19, or diagnosed with COVID-19?</string>
    <string name="i_don_t_know">I don\'t know</string>
    <string name="do_you_have_any_of_the_following_check_any">Do you have any of the following? (check any)</string>
    <string name="fever_or_feeling_feverish_such_as_chills_sweating">Fever or feeling feverish (such as chills, sweating)</string>
    <string name="personal_information">Personal Information</string>
    <string name="full_name">Full Name</string>
    <string name="user_name">User Name</string>
    <string name="passward">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="birth_day">Birth Day</string>
    <string name="register">Register</string>
    <string name="do_you_have_any_of_the_following_symptoms">Do you have any of the following symptoms?</string>
    <string name="fatigue">Fatigue</string>
    <string name="muscle_pain">Muscle pain</string>
    <string name="chills">Chills</string>
    <string name="headache">Headache</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="nausea">Nausea</string>
    <string name="sore_throat">Sore Throat</string>
    <string name="impaired_taste_or_smell">Impaired taste or smell</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="region">Region</string>
    <string name="total_number_of_case">Total Number of Case:</string>
    <string name="number_of_death">Number of Death:</string>
    <string name="dash_board">Dash Board</string>
    <string name="covid_symptom">Covid Symptom</string>
    <string name="covid_prevention">Covid Prevention</string>
    <string name="covid_treatment">Covid Treatment</string>
    <string name="covid_19_self_checker">Covid-19 Self-Checker</string>
    <string name="covid_19_risk_assesment">Covid-19 Risk Assessment</string>
    <string name="body_mas_index">Body Mas Index</string>
    <string name="call_center">Call Center</string>
    <string name="q_amp_a_on_covid_19"><![CDATA[Q&A on Covid-19]]></string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
</resources>