<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorWhite"
    tools:context=".BMIFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:layout_marginVertical="25dp"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/your_weight_in_kg"
        android:textColor="@color/colorPrimary" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edit_bg"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="50dp"
        android:layout_height="wrap_content"
        android:text="@string/your_height_in_meter"
        android:textColor="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="12dp"
        android:inputType="numberDecimal"
        android:textColor="#000"
        android:background="@drawable/edit_bg"
        />

    <Button
        android:id="@+id/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:text="@string/calculate"
        android:background="@drawable/button_bg"
        android:textColor="#fafafa"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="15dp"
        android:text="@string/your_result"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="26sp"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="0.0"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bmi_categories"
        android:textStyle="bold"
        android:layout_marginLeft="-100dp"
        android:textColor="#393030"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="-50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/underweight_less_than_18_5"
            android:textSize="10dp"
            android:textColor="#393030"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_weight_18_5_24_9"
            android:textSize="10dp"
            android:textColor="#393030"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overweight_25_29_9"
            android:textSize="10dp"
            android:textColor="#393030"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obesity_bmi_of_30_or_greater"
            android:textSize="10dp"
            android:textColor="#393030"/>
    </LinearLayout>

</LinearLayout>