<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/do_you_have_any_of_the_following_symptoms"
            android:textAlignment="center"
            android:textColor="#005E70"
            android:textSize="20dp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/layoutborder_bg"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/fatigue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/fatigue"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/musclepain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/muscle_pain"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/chills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/chills"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/headache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/headache"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/diarrhea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/diarrhea"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/nauseas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/nausea"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/sorethroat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/sore_throat"
                android:textColor="#005E70" />

            <CheckBox
                android:id="@+id/impairedtest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorGrapeFruitDark"
                android:text="@string/impaired_taste_or_smell"
                android:textColor="#005E70" />
        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_background"
                android:text="@string/back"
                android:textSize="15dp" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login_background"
                android:text="@string/next"
                android:textSize="15dp" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>
