<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".SignUp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_information"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/font1"
                android:textSize="30dp"/>


            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/full_name"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_user"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:padding="10dp"
                android:hint="@string/user_name"
                android:textColor="@color/colorPrimary"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_user"/>
            <EditText
                android:id="@+id/password1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:padding="10dp"
                android:hint="@string/passward"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_password"/>
            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_password"/>
            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:padding="10dp"
                android:hint="@string/phone_number"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_baseline_phone_android_24"/>
            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_bg"
                android:textColorHint="@color/colorPrimary"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:hint="@string/birth_day"
                android:drawablePadding="10dp"
                android:layout_marginTop="20dp"
                android:drawableStart="@drawable/ic_user"/>
            <RadioGroup
                android:id="@+id/radioGrp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                >
                <RadioButton
                    android:id="@+id/radioM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:checked="true"
                    android:drawableRight="@drawable/male"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="@string/male"
                    android:textColor="@color/colorPrimary"
                    />
                <RadioButton
                    android:id="@+id/radioF"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:checked="false"
                    android:drawableRight="@drawable/female"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"
                    android:textSize="14dp"
                    android:text="@string/female"
                    />
            </RadioGroup>


            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/button_bg"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="21sp" />

            <TextView
                android:id="@+id/gotoLoginActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account_login"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>